--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,19 @@ spring.datasource.username=root
 spring.datasource.password=a24580019@
 
 # Configuração JPA
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Configuração Porta tomcat
 server.port=9090
+
+# Configuração Pool de conexão
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+
+# Configuração Flyway
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
+
+
